src/test/deca/syntax/invalid/created/syntax/init-int-void.deca
// Description : 
//	 test d'initialisation int <-- void
// Resultats :
//	 6:9: mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, INT, '-', '!', '(', FLOAT, STRING}
{
	int i = ;
}
